--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <body>
     <h3>410 Gone</h3>
+    <p>PORUBUskeyは2月13日をもって<a href="https://mk.shumihub.net/>シュミすきーに移行しました。</a></p>
     <hr />
     <p>Powered by <a href="https://github.com/cyber-gene/netlify-410">netlify-410</a></p>
   </body>
