--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <body>
     <h3>410 Gone</h3>
-    <p>PORUBUskeyは2月13日をもって<a href="https://mk.shumihub.net/>シュミすきー</a>に移行しました。</p>
+    <p>PORUBUskeyは2月13日をもって<a href="https://mk.shumihub.net/>シュミすきー</a>に移行しました。<br>
+      シュミすき〜は登録を解放しています。</p>
     <hr />
     <p>Powered by <a href="https://github.com/cyber-gene/netlify-410">netlify-410</a></p>
   </body>
