--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <h3>410 Gone</h3>
-    <p>PORUBUskeyは2月13日をもって<a href="https://mk.shumihub.net/>シュミすきー</a>に移行しました。</p>
+    <p>PORUBUskeyは2月13日をもってシュミすきー（ https://mk.shumihub.net/ ）に移行しました。</p>
     <br>
     <br>
     <hr />
